LandTabbeb details added

--- a/Lands/Lands/Views/LandPage.xaml
+++ b/Lands/Lands/Views/LandPage.xaml
@@ -5,8 +5,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="Lands.Views.LandPage"
+             IconImageSource="ic_action_info"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"             
-             Title="Land">
+             Title="Information">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding Land}">
