--- a/Lands/Lands/Views/LandsPage.xaml
+++ b/Lands/Lands/Views/LandsPage.xaml
@@ -4,10 +4,19 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              x:Class="Lands.Views.LandsPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              BackgroundColor="Silver"
              Title="Lands">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <ffimageloadingsvg:SvgImageSourceConverter 
+                x:Key="SvgImageSourceConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout        
             BindingContext="{Binding Lands}">
@@ -39,11 +48,18 @@
                                 </Frame.GestureRecognizers>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
                                         <ColumnDefinition Width="*"></ColumnDefinition>
                                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
-                                    <StackLayout
+                                    <ffimageloading:CachedImage 
                                         Grid.Column="0"
+                                        HeightRequest="30"
+                                        WidthRequest="60"
+                                        Source="{Binding Flag, Converter={StaticResource SvgImageSourceConverter}}">
+                                    </ffimageloading:CachedImage>
+                                    <StackLayout
+                                        Grid.Column="1"
                                         VerticalOptions="Center">
                                         <Label
                                             FontAttributes="Bold"
@@ -55,7 +71,7 @@
                                             TextColor="Black"></Label>
                                     </StackLayout>
                                     <Image
-                                        Grid.Column="1"
+                                        Grid.Column="2"
                                         HorizontalOptions="End"
                                         Source="ic_chevron_right"></Image>
                                 </Grid>
